# Shuk

./: .env.example  .gitignore  CLAUDE.md  index.html  railway.toml  robots.txt  sitemap.xml  sw.js
.claude/specs/: remaining-work.md
api/: premiumService.js
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py  schemas.py
backend/app/api/v1/endpoints/: companies.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py
backend/app/engine/: metrics.py
backend/app/services/: company_pipeline.py  dividends_pipeline.py  financials_pipeline.py
css/: styles.css
database/seeds/: companies_seed.sql
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/charts/: MarginsChart.tsx  RevenueChart.tsx
frontend/src/lib/: api.ts
js/: app.js  auth.js  premium.js  profile.js  router.js  scenarios.js  supabase-client.js
shuk/: .env.example  PLAN.md  README.md  docker-compose.yml
shuk/backend/: Dockerfile  pyproject.toml
shuk/backend/app/: main.py
shuk/backend/scripts/: run_pipeline.py
shuk/backend/tests/: test_dcf.py  test_metrics.py
shuk/database/migrations/: 001_initial_schema.sql
shuk/database/seeds/: companies_seed.sql
shuk/frontend/: tailwind.config.ts
supabase/functions/check-subscription/: index.ts
supabase/functions/create-checkout/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 001_initial_schema.sql
(+21 files in other folders)
